--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
 </head>
 <body>
     <div>
-        <h1>Hello world
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis aliquid quisquam, sed nisi quos quidem amet rem repellat ratione dolorum voluptas sit et id ex suscipit obcaecati! Sunt, dolorem temporibus.</p>
-        </h1>
-    </div>
+        <h1>Hello world</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis 
+                aliquid quisquam, sed nisi quos quidem amet rem repellat ratione dolorum voluptas sit 
+                et id ex suscipit obcaecati! Sunt, dolorem temporibus.</p>
+        <ul><li></li>
+        <li>Point 1</li>
+        <li>Point 2</li>
+        <li>Point 3 </li>      
+        <li>
+            <ul><li></li>
+            <li></li>
+            <li></li>
+            <li ></li>
+        </ul>
+        </li>
+        </ul>
+        
+    </div>   
 
 
     
