--- a/index.html
+++ b/index.html
@@ -7,27 +7,34 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Anastasiia Bikadorova</h1> 
     <div>
-        <h1>Hello world</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis 
-                aliquid quisquam, sed nisi quos quidem amet rem repellat ratione dolorum voluptas sit 
-                et id ex suscipit obcaecati! Sunt, dolorem temporibus.</p>
-        <ul><li></li>
-        <li>Point 1</li>
-        <li>Point 2</li>
-        <li>Point 3 </li>      
-        <li>
-            <ul><li></li>
-            <li></li>
-            <li></li>
-            <li ></li>
+        <p>E-mail: bikadorovanastya1@gmail.com</p>
+        <p>Tel: +38(063)5558822</p>
+        <p> LinkedIn: <a target="_blank" href="https://ua.linkedin.com/in/anastasiia-bikadorova-369047180"> Anastasiia Bikadorova</a></p>
+    </div> 
+    <aside>
+        <img src="img/IMG_20190225_121709.png" alt="">
+    </aside>   
+    <div>   
+        <h2>Work experience</h2>
+        <h3>Vents - export manager</h3>
+        <p>March 2019 - Present</p>
+        <ul>
+            <li>arranging transportation of the goods</li>
+            <li>providing shipmnet documnets</li>
+            <li>organazing the packaging of the good son the pallets</li>
         </ul>
-        </li>
+        <h3>FM Logistic - International transport forwarding agent</h3>
+        <p>December 2017 - February 2019</p>
+        <ul>
+            <li type="square">arranging transportation of the goods</li>
+            <li type="square">calculation the freight cost ny different modes of transport</li>
+            <li type="square">working out tenders & daily request</li>
         </ul>
-        
-    </div>   
-
-
-    
+        <h2>Education</h2>
+        <p>September 2013-June 2017: <b>National Transport University</b>, Bachelor degree of Logistics engineering</p>
+    </div> 
+   
 </body>
 </html>
