add homework to the lesson02

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
         <p>
             <b>Last updated:</b> February 01, 2022
         </p>
+        <p>
+            Author: Anastasiia Bikadorova
+        </p>
+        <iframe src="resume.html" frameborder="0" height = 500 width="500"> </iframe>
     </footer>
 
 </body>
