--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Black Holes</title>
 </head>
 <body>
     <header>
@@ -57,7 +57,6 @@
                 height="500"
                 width="700">
             </iframe>
-            <!-- <img src="img/black-hole-img1.png" alt="Black Hole picture 1" height="=400", width="600"> -->
             <p>
                 The idea of an object in space so massive and dense that light could not escape 
                 it has been around for centuries. Most famously, black holes were predicted by 
@@ -125,6 +124,5 @@
         </p>
         <iframe src="resume.html" frameborder="0" height = 500 width="500"> </iframe>
     </footer>
-
 </body>
 </html>
