add homework for lesson04

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -17,29 +20,80 @@
         </p>
     </header>
 <main>
-    <div>
-        <ul class="list">
-            <li class="list-item">
-                A lot of pickles <span class="small text">(for the next lessons about CSS)</span>
-            </li>
-            <li class="list-item">
-                10 apples <span class="small text">(for more CSS manipulations)</span>
-            </li>
-            <li class="list-item">
-                20 oranges <span class="small text">(because they are awesome)</span>
-            </li>
-            <li class="list-item">
-                13 plates <span class="small text">(hm... they always dissapear)</span>
-            </li>
-            <li class="list-item">
-                15 bentos
-            </li>
-            <li class="list-item">
-                1 bottle of Sake <span class="small text">(for my friends)</span>
-            </li>
-        </ul>
+    <div class="list-box">
+        <div class="list">
+            <label for="" class="item">
+                <input type="checkbox">
+                <span class="text">
+                    A lot of pickles
+                </span>
+                <span class="small-text">
+                    for the next lessons about CSS
+                </span>
+            </label>
+        </div>
+        <div class="list">
+            <label for="" class="item">
+                <input type="checkbox">
+                <span class="text">
+                    10 apples
+                </span>
+                <span class="small-text">
+                    for more CSS manipulations
+                </span>
+            </label>
+        </div>
+        <div class="list">
+            <label for="" class="item">
+                <input type="checkbox">
+                <span class="text">
+                    20 oranges
+                </span>
+                <span class="small-text">
+                    because they are awesome
+                </span>
+            </label>
+        </div>
+        <div class="list">
+            <label for="" class="item">
+                <input type="checkbox">
+                <span class="text">
+                    13 plates
+                </span>
+                <span class="small-text">
+                    hm... they always dissapear
+                </span>
+            </label>
+        </div>
+        <div class="list">
+            <label for="" class="item">
+                <input type="checkbox">
+                <span class="text">
+                    15 bentos
+                </span>
+            </label>
+        </div>
+        <div class="list">
+            <label for="" class="item">
+                <input type="checkbox">
+                <span class="text">
+                    1 bottle of Sake 
+                </span>
+                <span class="small-text">
+                    for my friends
+                </span>
+            </label>
+        </div>
+
+    <!-- Bon appetite button -->
+        <div class="footer">
+            <p class="footer-text">
+                Bon appetit :)
+            </p>
+        </div>
     </div>
-    <div></div>
+
+   
 </main>
 </body>
 </html>
